Added httpadapter and Fixed predict controller
